# whytchat-app

./: .codacy.yml  .gitignore  .sourcery.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  codacy-fixes.patch  codacy-fixes.txt  codacy-results.json  eslint.config.js  installer.iss  latest.json  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-macos.yml  codacy.yml  pr-audit.yml  release-macos.yml  release.yml  sourcery.yml
.tauri-target/debug/.fingerprint/byteorder-a0746a1942865c31/: lib-byteorder  lib-byteorder.json
.tauri-target/debug/.fingerprint/bytes-2026280b01880f04/: lib-bytes  lib-bytes.json
.tauri-target/debug/.fingerprint/cc-7ca099513e1556c8/: lib-cc  lib-cc.json
.tauri-target/debug/.fingerprint/cfg-if-a8b587f74387df5b/: lib-cfg_if  lib-cfg_if.json
.tauri-target/debug/.fingerprint/displaydoc-72495fec2e3a275d/: lib-displaydoc  lib-displaydoc.json
.tauri-target/debug/.fingerprint/find-msvc-tools-ccda9af3910b38d5/: lib-find_msvc_tools  lib-find_msvc_tools.json
.tauri-target/debug/.fingerprint/fnv-b9a482015c76de4b/: lib-fnv  lib-fnv.json
.tauri-target/debug/.fingerprint/getrandom-0df67afd26652ecd/: run-build-script-build-script-build  (+1 more)
docs/: ONBOARDING_IMPLEMENTATION.md
scripts/: check-i18n.cjs  check-version.cjs
src/: App.tsx  i18n.ts  index.css  index.html  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  pack-sources.json  presets.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  llama.rs  llama_install.rs  main.rs  rag.rs
src/components/: UpdateNotification.tsx
src/components/Chat/: Chat.tsx
src/components/ConversationsList/: ConversationsList.tsx  index.tsx
src/components/ErrorBoundary/: ErrorBoundary.tsx  index.tsx
src/components/Home/: Home.tsx
src/components/InstallLlamaServer/: InstallLlamaServer.tsx  index.tsx
src/components/NewConversation/: NewConversation.tsx  SimpleModeView.tsx  index.tsx  types.ts
src/components/RAG/: DatasetsPanel.tsx
src/components/ServerStatusIndicator/: ServerDebugModal.tsx  ServerStatusIndicator.tsx  index.tsx
src/components/Settings/: Settings.tsx  UpdateSection.tsx
src/components/ShortcutsHelp/: ShortcutsHelp.tsx  index.tsx
src/components/TitleBar/: TitleBar.tsx  index.tsx
src/contexts/: ServerContext.tsx  ThemeContext.tsx
src/hooks/: useKeyboardShortcuts.ts
src/locales/: de.json  en.json  es.json  fr.json  it.json  nl.json  pl.json  pt.json
src/rag/: api.ts  types.ts
src/utils/: errors.ts  storage.ts
(+152 files in other folders)
