[package]
name = "whytchat-desktop"
version = "0.2.7"
edition = "2021"
description = "Whytchat local desktop app"

[build-dependencies]
tauri-build = { version = "2", features = [] }
ico = "0.3"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri = { version = "2", features = [] }
tauri-plugin-shell = { version = "2" }
tauri-plugin-dialog = { version = "2" }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"] }
futures-util = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
zip = "0.6"

# Document parsing for RAG
pdf-extract = "0.7"
xml-rs = "0.8"
scraper = "0.21"  # HTML parsing
regex = "1.10"
